	* Incremented the package version to 1.3.1.
2018-07-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a race that caused segfaults when stopping audio playout
	under ALSA.
2018-08-30 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'INSTALL'.
2018-09-10 Fred Gleason <fredg@paravelsystems.com>
	* Modified build system to build against 'rivwebcapi'.
	* Fixed bugs that caused corruption of UTF-8 strings.
2019-03-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlogeditb(1) that failed to abort the log edit
	operation after getting an error from the 'ListLog' API call.
2019-03-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlogeditb(1) that caused corruption of log
	names containing multibyte UTF-8 characters.
2019-03-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed incorrect program names returned by the '--help' and
	'--versions' switches in rdlibraryb(1) and rdlogeditb(1).
	* Added support for the '--help' and '--version' switches to
	rdadminb(1).
2019-03-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlibraryb(1) and rdlogeditb(1) that caused
	the title bar of the main window to display the default host and
	user name rather than the values actually used for the login.
2019-09-20 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'INSTALL'.
2019-09-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.3.2.
2019-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Changed the behavior when clicking the 'x' button on the
	'Unsaved Changes' dialog in rdlogeditb(1) to cancel the
	current operation.
2019-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'Add Log' dialog in rdlogeditb(1) to disable the
	'OK' button when the 'Log Name' field is empty.
2019-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused the package version and current
	host login information to fail to appear in the titlebar
	when authenticating by ticket.