@@ -2,7 +2,7 @@
 //
 // Rivendell-Producer configuration
 //
-//   (C) Copyright 2016-2017 Fred Gleason <fredg@paravelsystems.com>
+//   (C) Copyright 2016-2019 Fred Gleason <fredg@paravelsystems.com>
 //
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License as
@@ -225,7 +225,7 @@ int Config::addLog(const QString &logname,const QString &svcname)
 		  conf_user_agent.toUtf8());
     if(ret==0) {
       LockIdentity();
-      emit serverLoginUpdated("");
+      emit serverLoginUpdated(conf_ticket_username);
       return ret;
     }
     if((ret==403)||(ret==-1)) {
@@ -249,7 +249,7 @@ int Config::deleteLog(const QString &logname)
 		     conf_user_agent.toUtf8());
     if(ret==0) {
       LockIdentity();
-      emit serverLoginUpdated("");
+      emit serverLoginUpdated(conf_ticket_username);
       return ret;
     }
     if((ret==403)||(ret==-1)) {
@@ -273,7 +273,7 @@ bool Config::listCart(struct rd_cart **cart,const unsigned cartnum)
 		    cartnum,conf_user_agent.toUtf8(),&numrecs);
     if(ret==0) {
       LockIdentity();
-      emit serverLoginUpdated("");
+      emit serverLoginUpdated(conf_ticket_username);
       return true;
     }
     if((ret==403)||(ret==-1)) {
@@ -299,7 +299,7 @@ int Config::listCarts(struct rd_cart **carts,unsigned *numrecs,
 		     conf_user_agent.toUtf8(),numrecs);
     if(ret==0) {
       LockIdentity();
-      emit serverLoginUpdated("");
+      emit serverLoginUpdated(conf_ticket_username);
       return ret;
     }
     if((ret==403)||(ret==-1)) {
@@ -323,7 +323,7 @@ int Config::listCuts(struct rd_cut **cuts,const unsigned cartnum,
 		    cartnum,conf_user_agent.toUtf8(),numrecs);
     if(ret==0) {
       LockIdentity();
-      emit serverLoginUpdated("");
+      emit serverLoginUpdated(conf_ticket_username);
       return ret;
     }
     if((ret==403)||(ret==-1)) {
@@ -347,7 +347,7 @@ int Config::listCut(struct rd_cut **cuts,const unsigned cartnum,
 		   cartnum,cutnum,conf_user_agent.toUtf8(),numrecs);
     if(ret==0) {
       LockIdentity();
-      emit serverLoginUpdated("");
+      emit serverLoginUpdated(conf_ticket_username);
       return ret;
     }
     if((ret==403)||(ret==-1)) {
@@ -370,7 +370,7 @@ int Config::listGroups(struct rd_group **grps,unsigned *numrecs)
 		      conf_user_agent.toUtf8(),numrecs);
     if(ret==0) {
       LockIdentity();
-      emit serverLoginUpdated("");
+      emit serverLoginUpdated(conf_ticket_username);
       return ret;
     }
     if((ret==403)||(ret==-1)) {
@@ -394,7 +394,7 @@ int Config::listLog(struct rd_logline **lines,unsigned *numrecs,
 		   logname.toUtf8(),conf_user_agent.toUtf8(),numrecs);
     if(ret==0) {
       LockIdentity();
-      emit serverLoginUpdated("");
+      emit serverLoginUpdated(conf_ticket_username);
       return ret;
     }
     if((ret==403)||(ret==-1)) {
@@ -420,7 +420,7 @@ int Config::listLogs(struct rd_log **logs,unsigned *numrecs,
 		    recent,conf_user_agent.toUtf8(),numrecs);
     if(ret==0) {
       LockIdentity();
-      emit serverLoginUpdated("");
+      emit serverLoginUpdated(conf_ticket_username);
       return ret;
     }
     if((ret==403)||(ret==-1)) {
@@ -445,7 +445,7 @@ int Config::listServices(struct rd_service **svcs,unsigned *numrecs,
 			trackable,conf_user_agent.toUtf8(),numrecs);
     if(ret==0) {
       LockIdentity();
-      emit serverLoginUpdated("");
+      emit serverLoginUpdated(conf_ticket_username);
       return ret;
     }
     if((ret==403)||(ret==-1)) {
@@ -471,7 +471,7 @@ int Config::saveLog(struct save_loghdr_values *hdr,
 		   conf_user_agent.toUtf8());
     if(ret==0) {
       LockIdentity();
-      emit serverLoginUpdated("");
+      emit serverLoginUpdated(conf_ticket_username);
       return ret;
     }
     if((ret==403)||(ret==-1)) {
@@ -590,7 +590,7 @@ bool Config::save()
 int Config::exec()
 {
   if(QDialog::exec()) {
-    emit serverLoginUpdated(serverUsername());
+    emit serverLoginUpdated(conf_ticket_username);
     return true;
   }
   return false;
@@ -619,6 +619,7 @@ void Config::okData()
   setServerPassword("");
   conf_server_ticket_expiration=
     DateTime::fromTm(tktinfo->tkt_expiration_datetime);
+  conf_ticket_username=conf_username_edit->text();
   free(tktinfo);
   SaveTicket();
   LockIdentity();
@@ -657,6 +658,8 @@ void Config::resizeEvent(QResizeEvent *e)
 
 void Config::LoadTicket()
 {
+  QString username;
+  bool ok=false;
 #ifdef MME
   QSettings s("Radio Free Asia","Rivendell");
   conf_server_ticket=s.value("TicketString").toString();
@@ -672,6 +675,13 @@ void Config::LoadTicket()
   conf_server_ticket_expiration=
     QDateTime::fromString("yyyyMMddhhmmss",
 			  p->stringValue("Rivendell","TicketExpiration"));
+  username=p->stringValue("Rivendell","TicketUser","",&ok);
+  if(ok) {
+    conf_ticket_username=username;
+  }
+  else {
+    conf_ticket_username="";
+  }
   delete p;
 #endif  // ALSA
 }
@@ -699,6 +709,8 @@ void Config::SaveTicket() const
     fprintf(f,"TicketString=%s\n",(const char *)serverTicket().toUtf8());
     fprintf(f,"TicketExpiration=%s\n",(const char *)serverTicketExpiration().
 	    toString("yyyyMMddhhmmss").toUtf8());
+    fprintf(f,"TicketUser=%s\n",
+	    (const char *)conf_username_edit->text().toUtf8());
     fclose(f);
     rename(filename.toUtf8(),(dir.path()+"/.rivendell/ticket").toUtf8());
   }
