@@ -441,3 +441,5 @@
 	* Fixed a bug that caused the package version and current
 	host login information to fail to appear in the titlebar
 	when authenticating by ticket.
+2019-11-04 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'TicketUser=' parameter to login tickets for Linux.
